--- a/arch/arm/boot/dts/msm8974-lge-common/msm8974-lge-common.dtsi
+++ b/arch/arm/boot/dts/msm8974-lge-common/msm8974-lge-common.dtsi
@@ -60,6 +60,12 @@
 				<84 512 0 0>,
 				<84 512 500 800>;
 	};
+
+	bt_rfkill {
+		compatible = "lge,bluetooth_rfkill";
+		//gpio-bt-reset = <&msmgpio 20 0>;
+		gpio-bt-on = <&msmgpio 41 0>;
+		};
 };
 
 &spmi_bus {
