defconfig: update hammerhead_defconfig from lollipop-mr1
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

--- a/arch/arm/configs/hammerhead_defconfig
+++ b/arch/arm/configs/hammerhead_defconfig
@@ -24,7 +24,7 @@ CONFIG_RD_LZMA=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
-# CONFIG_SLUB_DEBUG is not set
+CONFIG_SLUB_DEBUG=y
 CONFIG_PROFILING=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
@@ -349,8 +349,6 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
-# CONFIG_DIAG_CHAR is not set
-# CONFIG_DIAG_OVER_USB is not set
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
@@ -606,7 +604,5 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
-CONFIG_KEXEC=y
-CONFIG_KEXEC_HARDBOOT=y
-CONFIG_ATAGS_PROC=n
-CONFIG_PROC_DEVICETREE=y
+CONFIG_SLABINFO=y
+CONFIG_CRYPTO_AES_ARM=y
