defconfig: update franco_defconfig again
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -219,7 +219,7 @@ CONFIG_EFI_PARTITION=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
@@ -673,7 +673,9 @@ CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
-# CONFIG_KEXEC is not set
+CONFIG_KEXEC=y
+# CONFIG_ATAGS_PROC is not set
+CONFIG_KEXEC_HARDBOOT=y
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
 
@@ -1325,7 +1327,7 @@ CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
 CONFIG_QPNP_MISC=y
 CONFIG_TI_DRV2667=y
-CONFIG_EARJACK_DEBUGGER=y
+# CONFIG_EARJACK_DEBUGGER is not set
 CONFIG_FAN48632_BOOST=y
 # CONFIG_C2PORT is not set
 
@@ -1606,13 +1608,7 @@ CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 # CONFIG_TOUCHDISC_VTD518_SHINETSU is not set
-CONFIG_INPUT_TABLET=y
-CONFIG_TABLET_USB_ACECAD=y
-CONFIG_TABLET_USB_AIPTEK=y
-CONFIG_TABLET_USB_GTCO=y
-CONFIG_TABLET_USB_HANWANG=y
-CONFIG_TABLET_USB_KBTAB=y
-CONFIG_TABLET_USB_WACOM=y
+# CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -2523,7 +2519,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334 is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-# CONFIG_LCD_KCAL is not set
+CONFIG_LCD_KCAL=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
@@ -2599,7 +2595,7 @@ CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HID_BATTERY_STRENGTH is not set
-# CONFIG_HIDRAW is not set
+CONFIG_HIDRAW=y
 CONFIG_UHID=y
 
 #
@@ -2860,7 +2856,6 @@ CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-# CONFIG_MMC_BLOCK_TEST is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
