PM: wakeup_reasons: disable wakeup-reason deduction by default
Introduce a config item, CONFIG_DEDUCE_WAKEUP_REASONS, disabled by default.
Make CONFIG_PARTUALRESUME select it.

Change-Id: I7d831ff0a9dfe0a504824f4bc65ba55c4d92546b
Signed-off-by: Iliyan Malchev <malchev@google.com>

Conflicts:

	kernel/power/Kconfig

Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -290,3 +290,7 @@ config PM_SYNC_BEFORE_SUSPEND
 	bool "Sync file systems before suspend"
 	depends on PM
 	default y
+
+config DEDUCE_WAKEUP_REASONS
+	bool
+	default n
